src/test/ui/impl-trait/equality.stderr
error[E0308]: mismatched types
  --> $DIR/equality.rs:25:5
   |
21 | fn two(x: bool) -> impl Foo {
   |                    -------- expected `_` because of return type
...
25 |     0_u32
   |     ^^^^^ expected i32, found u32
   |
   = note: expected type `i32`
              found type `u32`

error[E0277]: the trait bound `u32: std::ops::Add<impl Foo>` is not satisfied
  --> $DIR/equality.rs:34:11
   |
34 |         n + sum_to(n - 1)
   |           ^ no implementation for `u32 + impl Foo`
   |
   = help: the trait `std::ops::Add<impl Foo>` is not implemented for `u32`

error[E0308]: mismatched types
  --> $DIR/equality.rs:53:18
   |
53 |     let _: u32 = hide(0_u32);
   |                  ^^^^^^^^^^^ expected u32, found anonymized type
   |
   = note: expected type `u32`
              found type `impl Foo`

error[E0308]: mismatched types
  --> $DIR/equality.rs:59:18
   |
59 |     let _: i32 = Leak::leak(hide(0_i32));
   |                  ^^^^^^^^^^^^^^^^^^^^^^^ expected i32, found associated type
   |
   = note: expected type `i32`
              found type `<impl Foo as Leak>::T`

error[E0308]: mismatched types
  --> $DIR/equality.rs:66:10
   |
66 |     x = (x.1,
   |          ^^^ expected u32, found i32
   |
   = note: expected type `impl Foo` (u32)
              found type `impl Foo` (i32)

error[E0308]: mismatched types
  --> $DIR/equality.rs:69:10
   |
69 |          x.0);
   |          ^^^ expected i32, found u32
   |
   = note: expected type `impl Foo` (i32)
              found type `impl Foo` (u32)

error: aborting due to 6 previous errors

